examples/c/error-codes/undefined/UB-CEB6-bad-static.output
UB-CEB6-bad-static.c:4:4: warning: expression result unused [-Wunused-value]
 5 >> -1;
 ~ ^  ~~
UB-CEB6-bad-static.c:4:4: warning: shift count is negative [-Wshift-count-negative]
 5 >> -1;
   ^  ~~
2 warnings generated.
UB-CEB6-bad-static.c:4:4: error: The right operand in a bitwise shift is negative.

    Undefined behavior (UB-CEB6):
        see C11 section 6.5.7:3 http://rvdoc.org/C11/6.5.7
        see C11 section J.2:1 item 51 http://rvdoc.org/C11/J.2
        see CERT-C section INT34-C http://rvdoc.org/CERT-C/INT34-C
        see MISRA-C section 8.1:3 http://rvdoc.org/MISRA-C/8.1

